--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
 
+
 *, ::before,::after {
     margin: 0;
     padding: 0;
@@ -18,6 +19,7 @@ body {
     justify-content: center;
     padding: 30px;
     height: 150px;
+    margin-bottom: 25px;
     
 }
 
@@ -183,8 +185,9 @@ body {
 .formulario{
     display: flex;
     flex-direction: column;
-    width: 300px;
+    width: auto;
     height: auto;
+    font-size: 1rem;
 }
 
 h1{
@@ -192,6 +195,7 @@ h1{
     justify-content: center;
     font-size: 40px;
     margin: 30px 0 30px 0;
+    padding-top: 15px;
 }
 
 h2{
