--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,63 @@
     box-sizing: border-box;
 }
 
+@media screen and (max-width: 576px) {
+    
+
+    #header .logo img{
+        max-width: 400px;
+    
+    }
+
+    #banner img{
+        max-width: 576px;
+    }
+
+    .parrafo{
+        font-size: 2rem;
+    }
+
+/*     #main{
+        max-width: 480px;
+    }
+
+    #destacados {
+        max-width: 450px;
+    }
+
+    #destacados img{
+        max-width: 50%;
+
+    }
+
+    #destacados p{
+        font-size: 2rem;
+    }
+
+    .footer-arriba{
+        max-width: 480px;
+    } */
+    
+}
+
+@media screen and (max-width: 768px){
+
+    #header .logo img{
+        max-width: 400px;
+    
+    }
+
+    .banner img{
+        max-width: 768px;
+    }
+
+    .parrafo{
+        font-size: 2rem;
+    }
+
+}
+
+
 body {
     font-family: 'Quicksand', sans-serif;
     background-color: #ffffff;
@@ -16,7 +73,7 @@ body {
 
 #header .logo{
     display: flex;
-    justify-content: center;
+    
     padding: 30px;
     height: 150px;
     margin-bottom: 25px;
@@ -39,7 +96,7 @@ body {
     font-size: 20px;
 }
 
-#banner {
+.banner {
     display: flex;
     justify-content: center;
 }
@@ -58,10 +115,17 @@ body {
 }
 
 #destacados {
-    display:flex;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: stretch;
+    gap: 30px;
+    padding: 80px;
+    /* display:flex;
     padding: 30px 0 30px 0;
     justify-content: center;
-    background-color: aliceblue;
+    background-color: aliceblue; */
 }
 
 #destacados .destacado{
@@ -81,9 +145,16 @@ body {
 
 #footer .footer-arriba{
     display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: stretch;
+    gap: 30px;
+    padding: 80px;
+   /*  display: flex;
     justify-content:space-evenly;
     margin-top: 30px;
-    margin-bottom: 30px;
+    margin-bottom: 30px; */
 }
 
 #footer .footer-arriba ul li{
@@ -133,6 +204,13 @@ body {
 #marcas{
     display: flex;
     justify-content: center;
+    flex-wrap: wrap;
+    flex-direction: row;
+    align-content: stretch;
+    gap: 30px;
+    padding: 80px;
+   /*  display: flex;
+    justify-content: center; */
 }
 
 #marcas .marca{
@@ -242,3 +320,4 @@ label[type="text-form"]{
     margin-bottom: 30px;
 
 }
+
