--- a/sass/_pages.scss
+++ b/sass/_pages.scss
@@ -25,7 +25,7 @@
     color: blueviolet;
 }
 
-#destacados {
+@mixin grupo {
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
@@ -33,6 +33,9 @@
     align-content: stretch;
     gap: 30px;
     padding: 80px;
+}
+#destacados {
+    @include grupo;
 
     .destacado {
         padding: 20px;
@@ -62,7 +65,7 @@
 
 
 #marcas {
-    @extend #destacados;
+    @include grupo;
 
     .marca {
         padding: 10px 40px 10px 40px;
